--- a/src/pages/recipe/Recipe.css
+++ b/src/pages/recipe/Recipe.css
@@ -27,3 +27,13 @@
 	text-align: left;
 	line-height: 1.5em;
 }
+
+/* dark mode */
+.recipe.dark {
+	background: #555;
+	color: #e4e4e4;
+}
+
+.recipe.dark .page-title {
+	color: #e4e4e4;
+}
