--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -31,3 +31,13 @@
 .ingredients button {
 	margin: 0 0 0 10px;
 }
+
+/* dark mode */
+.create.dark {
+	background: #333;
+	color: #e4e4e4;
+}
+
+.create.dark .page-title {
+	color: #e4e4e4;
+}
