--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -7,7 +7,7 @@
 	padding: 40px 0;
 }
 .recipe-list .card {
-	background: #fff;
+	background: rgb(243, 243, 243);
 	color: #333;
 	padding: 20px;
 	border-radius: 4px;
@@ -34,15 +34,20 @@
 }
 .recipe-list .card a {
 	color: #555;
+	background: rgb(212, 209, 209);
 	text-decoration: none;
 	display: block;
-	background: #e2e2e2;
 	font-size: 0.9em;
 	text-align: center;
 	width: 120px;
 	padding: 8px;
 	border-radius: 4px;
 	margin: 20px auto 0;
+	transition: background 0.3s ease;
+}
+
+.recipe-list .card a:hover {
+	background: rgb(223, 222, 222);
 }
 
 .delete {
@@ -61,4 +66,11 @@
 .recipe-list .card.dark h3,
 .recipe-list .card.dark div {
 	color: #e4e4e4;
+}
+.recipe-list .card.dark a {
+	background: rgb(199, 193, 193);
+}
+
+.recipe-list .card.dark a:hover {
+	background: rgb(216, 214, 214);
 }
