--- a/src/pages/recipe/Recipe.css
+++ b/src/pages/recipe/Recipe.css
@@ -3,8 +3,9 @@
 	margin: 40px auto;
 	text-align: center;
 	background: #fff;
-	padding: 40px;
+	padding: 10px 40px 20px;
 	box-sizing: border-box;
+	border-radius: 5px;
 }
 .recipe ul {
 	display: flex;
