--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,13 +12,17 @@
 	margin: 0 auto;
 }
 
+.navbar-right {
+	display: flex;
+}
+
 .navbar a.brand {
 	margin-right: auto;
 	color: #fff;
 	text-decoration: none;
 }
 
-.navbar a:last-child {
+.navbar-btn {
 	color: #fff;
 	text-decoration: none;
 	margin-left: 40px;
@@ -28,7 +32,30 @@
 	transition: 0.3s ease;
 }
 
-.navbar a:last-child:hover {
+.navbar-btn:hover {
 	background: #fff;
 	color: #333;
+}
+
+@media only screen and (max-width: 992px) {
+	.navbar {
+		padding: 15px;
+	}
+	.navbar nav {
+		padding: 0;
+	}
+	.navbar-title {
+		font-size: 32px;
+	}
+	.navbar-right {
+		flex-direction: column;
+	}
+	.navbar-btn {
+		font-size: 14px;
+		max-width: 164px;
+		width: 100%;
+		margin-left: 0;
+		display: flex;
+		justify-content: center;
+	}
 }
