--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -5,3 +5,20 @@
 .searchbar input {
 	margin-left: 10px;
 }
+
+@media only screen and (max-width: 992px) {
+	.searchbar {
+		margin-bottom: 10px;
+	}
+	.searchbar form {
+		justify-content: flex-end;
+	}
+
+	.searchbar input {
+		width: 120px;
+	}
+	.searchbar input,
+	.searchbar label {
+		font-size: 14px;
+	}
+}
