--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ textarea {
 	width: 100%;
 	box-sizing: border-box;
 	font-family: 'Merienda', cursive;
+	outline: none;
 }
 button {
 	font-family: 'Merienda', cursive;
