--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -1,7 +1,8 @@
 .create {
 	color: #555;
-	max-width: 480px;
-	margin: 60px auto;
+	max-width: 520px;
+	margin: 0 auto;
+	padding: 20px;
 }
 .create label span {
 	display: block;
